--- a/src/main/resources/templates/cypher/form.html
+++ b/src/main/resources/templates/cypher/form.html
@@ -49,15 +49,16 @@
     </div>
     <div id='map' style='width: 100%; height: 300px;'></div>
     <script>
-        var map;
-        var activeMarker;
+        var map,
+            activeMarker;
 
         function initMap() {
             var locationOfZlin = {lat: 49.22439, lng: 17.66485};
 
             map = new google.maps.Map(document.getElementById('map'), {
                 zoom: 14,
-                center: locationOfZlin
+                center: locationOfZlin,
+                draggableCursor:'crosshair'
             });
 
             map.addListener('click', function(event) {
@@ -89,11 +90,11 @@
         function addMarkerFromForm() {
             var latlng = document.getElementById('latLng').value;
             if (latlng) {
-                var toupleLatLng = latlng.split(",")
+                var toupleLatLng = latlng.split(",");
                 var lat = parseFloat(toupleLatLng[0]);
                 var lng = parseFloat(toupleLatLng[1]);
                 var latLngObject = {lat: lat, lng: lng};
-                addMarker(latLngObject)
+                addMarker(latLngObject);
             }
         }
 
