mazani input fieldu v modal dialogu po zadani spatneho Pinu

--- a/src/main/resources/templates/progress/getHintList.html
+++ b/src/main/resources/templates/progress/getHintList.html
@@ -78,6 +78,7 @@
         $("#verifyBtn").click(function () {
             verifyPinPost(hintId);
             $('#takeHintModal').modal('hide');
+            $(".modal-body input").val("");
         });
     }
 
