--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -8,7 +8,7 @@
 <div class="log-form">
     <h2>Lušteniny - přihlášení</h2>
     <form action="" method="post">
-        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+        <!--<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>-->
         <input type="text" id="username" name="username" placeholder="jméno" />
         <input type="password" id="password" name="password" placeholder="heslo" />
         <button type="submit" class="btn">Přihlásit</button>
