--- a/src/main/resources/templates/progress/getHintList.html
+++ b/src/main/resources/templates/progress/getHintList.html
@@ -100,7 +100,10 @@
 
     /*]]>*/
 </script>
-
+<form action="/logout" method="post">
+    <!--<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>-->
+    <button type="submit">Odhlásit</button>
+</form>
 </body>
 </html>
 
