--- a/src/main/resources/templates/progress/list.html
+++ b/src/main/resources/templates/progress/list.html
@@ -38,6 +38,10 @@
             </tbody>
         </table>
     </div>
+    <form action="/logout" method="post">
+        <!--<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>-->
+        <button type="submit">Odhlásit</button>
+    </form>
 </div>
 </body>
 </html>
