--- a/src/main/resources/templates/team/main.html
+++ b/src/main/resources/templates/team/main.html
@@ -19,12 +19,16 @@
             <div class="form-group">
                 <label for="name">Jméno: (*)</label>
                 <input id="name" class="form-control" type="text" th:field="*{name}"/>
-                <div class="invalid-feedback" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Chyba - Jméno</div>
+                <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}"
+                    style="color: orangered; font-size: 14px">Chyba - Jméno
+                </p>
             </div>
             <div class="form-group">
                 <label for="numberOfMembers">Počet členů: (*)</label>
                 <input id="numberOfMembers" class="form-control" type="number" th:field="*{numOfMembers}"/>
-                <div class="invalid-feedback" th:if="${#fields.hasErrors('numOfMembers')}" th:errors="*{numOfMembers}">Chyba - Počet členů</div>
+                <p th:if="${#fields.hasErrors('numOfMembers')}" th:errors="*{numOfMembers}"
+                    style="color: orangered; font-size: 14px">Chyba - Počet členů
+                </p>
             </div>
             <input type="submit" class="btn btn-primary" th:value="${action == '/team/add' ? 'Nový' : 'Uložit'}"/>
         </form>
