--- a/src/main/resources/templates/game/list.html
+++ b/src/main/resources/templates/game/list.html
@@ -32,7 +32,7 @@
                 <td th:text="${cypher.stage}" align="center">Cislo</td>
                 <td th:text="${cypher.location}">X, Y</td>
                 <td align="center">
-                    <a href="#" th:href="@{/progress/stage(cypherId=${cypher.cypherId})}">Stav</a>
+                    <a href="#" th:href="@{/game/stage(cypherId=${cypher.cypherId})}">Stav</a>
                 </td>
             </tr>
             </tbody>
