--- a/src/main/resources/templates/team/main.html
+++ b/src/main/resources/templates/team/main.html
@@ -30,8 +30,8 @@
                     <td th:text="${team.numOfMembers}" align="center">8</td>
                     <td th:text="${team.pin}" align="center">9876</td>
                     <td align="center">
-                        <a href="#" th:href="@{'/team/update/'+${team.teamId}}">Upravit</a> |
-                        <a href="#" th:href="@{'/team/delete/'+${team.teamId}}">Smazat</a>
+                        <a href="#" th:href="@{'/admin/team/update/'+${team.teamId}}">Upravit</a> |
+                        <a href="#" th:href="@{'/admin/team/delete/'+${team.teamId}}">Smazat</a>
                     </td>
                 </tr>
             </th:block>
@@ -61,7 +61,7 @@
                 </tr>
                 <tr>
                     <td></td>
-                    <td><input type="submit" th:value="${action == '/team/add' ? 'Nový' : 'Uložit'}"/>
+                    <td><input type="submit" th:value="${action == '/admin/team/add' ? 'Nový' : 'Uložit'}"/>
                     </td>
                 </tr>
             </table>
