give up cypher implemented with confirmation switch for statuses - pending: can see form to submit codeword; skipped: can see that they skipped this cypher; solved: can see that they put in the right codeword + can go to the next cypher + can go to bonus info

--- a/src/main/resources/templates/client/detail.html
+++ b/src/main/resources/templates/client/detail.html
@@ -50,7 +50,8 @@
 
 <div class="bodyContent ">
     <h2 th:text="|${cypher.stage}. ${cypher.name}|" class="botMargin10">šifra</h2>
-    <th:block th:unless="${statusName == 'SOLVED'}">
+    <th:block th:switch="${statusName}">
+        <th:block th:case="'PENDING'">
         <form action="/client/detail/{id}/verify" th:object="${codeWord}" method="post">
             <div class="pb-2">
                 <div class="pb-2">
@@ -60,32 +61,43 @@
                 <button class="btn-white" type ="submit"> Ověřit </button>
             </div>
         </form>
-    </th:block>
-    <th:block th:if="${statusName == 'SOLVED'}">
-        <div>
-            <p id="correctAnswer"> Zadali jste správné heslo. Šifra byla vyluštěna!</p>
-            <b>Kam dál?</b>
-            <a href="/client/detail/tadybudeiddalšíšifry">
-                <button class="correctButton"> Zobrazit další šifru </button>
-            </a>
-            <a id="bonusButton">
-                <button class="btn-white" onclick="showBonus()"> Zobrazit bonusové informace </button>
-            </a>
-            <p id="bonusInfo" th:text="${cypher.bonusContent}"></p>
-        </div>
-    </th:block>
-        <div class="pb-2">
-            <b>Adresa</b>
-            <br/>
-            <div th:text="${cypher.location}"></div>
-            <div>Cypher place description </div>
-            <div> map with pointer</div>
-        </div>
-    <form action="/client/detail/map">
-        <button class="btn-white" type="submit">Zobrazit na mapě</button>
-    </form>
-    <br/>
+        </th:block>
 
+        <th:block th:case="'SKIPPED'">
+            <div class="pb-2">
+                <b>Tuto šifru jste přeskočili</b>
+            </div>
+        </th:block>
+        <!-- If the cypher is solved, you can see buttons for bonus info and next cypher -->
+        <th:block th:case="${'SOLVED'}">
+            <div>
+                <p id="correctAnswer"> Zadali jste správné heslo. Šifra byla vyluštěna!</p>
+                <b>Kam dál?</b>
+                <a href="/client/detail/tadybudeiddalšíšifry">
+                    <button class="correctButton"> Zobrazit další šifru </button>
+                </a>
+                <a id="bonusButton">
+                    <button class="btn-white" onclick="showBonus()"> Zobrazit bonusové informace </button>
+                </a>
+                <p id="bonusInfo" th:text="${cypher.bonusContent}"></p>
+            </div>
+        </th:block>
+    </th:block>
+
+    <!-- Address and map info-->
+    <div class="pb-2">
+        <b>Adresa</b>
+        <br/>
+        <div th:text="${cypher.location}"></div>
+        <div>Cypher place description </div>
+        <!-- this button shows map -->
+        <form>
+            <button class="btn-white" type="submit">Zobrazit na mapě</button>
+        </form>
+    </div>
+    <br/>
+    <!-- Hint section : shows how many hints cypher have and what is their value -->
+    <th block th:if="${not #lists.isEmpty(hints)}">
     <form action="/client/detail/takeHint">
         <b>Nápověda</b>
         <div th:each="hint : ${hints}">
@@ -98,13 +110,21 @@
         </div>
         <br/>
     </form>
-
-    <form action="/client/detail/giveUp">
-        <br/>
-        <button class="btn-red" type="submit">Vzdát šifru</button>
-    </form>
-
-
+    </th>
+    <!--  GIVE UP CYPHER AVAILABLE ONLY IF STATUS == PENDING -->
+    <th block th:if="${statusName =='PENDING'}">
+        <form onsubmit="return confirm('Opravdu to chcete vzdát?')" action="/client/detail/giveUp" th:object="${cypher}" method="post">
+            <input type="hidden"  th:field="*{cypherId}" >
+            <input type="hidden"  th:field="*{hints}" >
+            <input type="hidden"  th:field="*{name}" >
+            <input type="hidden"  th:field="*{stage}" >
+            <input type="hidden"  th:field="*{location}" >
+            <input type="hidden"  th:field="*{codeword}" >
+            <input type="hidden"  th:field="*{bonusContent}" >
+            <br/>
+            <button class="btn-red" type="submit" onclick="">Vzdát šifru</button>
+        </form>
+    </th>
     <script>
         function showBonus() {
             var x = document.getElementById("bonusInfo");
@@ -112,12 +132,14 @@
             var y = document.getElementById("bonusButton");
             y.style.visibility = "hidden";
         }
+
         function showHint() {
             var x = document.getElementById("hintContent");
             x.style.visibility = "visible";
             var y = document.getElementById("hintButton");
             y.style.visibility = "hidden";
         }
+
     </script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
