upravena anotace tabulky pro umozneni mazani tymu upraven update tymu aby se netvoril pokazde novy uzivatel ale upravoval stavajici uzivatel

--- a/src/main/resources/templates/team/main.html
+++ b/src/main/resources/templates/team/main.html
@@ -16,6 +16,7 @@
         <form action="#" th:action="${action}" th:object="${team}" method="post">
             <input type="hidden" th:field="*{teamId}"/>
             <input type="hidden" th:field="*{pin}"/>
+            <input type="hidden" th:field="*{user}"/>
             <div class="form-group">
                 <label for="name">Jméno: (*)</label>
                 <input id="name" class="form-control" type="text" th:field="*{name}"/>
