pridana moznost odebrat Hint z progress casti

--- a/src/main/resources/templates/progress/getHintList.html
+++ b/src/main/resources/templates/progress/getHintList.html
@@ -28,9 +28,13 @@
                 <td id="hintId" align="center" th:text="${hint.hintId}">value</td>
                 <td align="center" th:text="${hint.value}">value</td>
                 <td align="center">
-                    <button th:disabled="${takenHints.get(hint.hintId) != null}"
+                    <button th:if="${takenHints.get(hint.hintId) == null}"
                             th:onclick="'javascript:openDialog(' + ${hint.hintId} + ')'">Vzít Hint
                     </button>
+                    <a href="#" th:if="${takenHints.get(hint.hintId) != null}"
+                       th:href="@{/game/progress/revertHint(hintId=${hint.hintId}, teamId=${team.teamId}, cypherId=${cypher.cypherId})}">
+                        Odebrat Hint
+                    </a>
                 </td>
                 <td th:text="${takenHints.get(hint.hintId)}" align="center"></td>
             </tr>
