parent d91b8b7e86542448720a454e1fdcbbdb9c61706c author kostka <dkostka@eurofunk.com> 1553781276 +0100 committer kostka <dkostka@eurofunk.com> 1554145036 +0200
parent d91b8b7e86542448720a454e1fdcbbdb9c61706c
author kostka <dkostka@eurofunk.com> 1553781276 +0100
committer kostka <dkostka@eurofunk.com> 1554144923 +0200

pridan LOCKED status a moznost nastaveni Lock statusu do progress casti

upraven format html stranek

upravena metoda getTeamsStatuses a stage.html uz nema kontrolu na status null

pridan LOCKED status a moznost nastaveni Lock statusu do progress casti

upravena stage.html stranka - odebrano duplicitni tlacitko

pridano zobrazen, ze tym nezahajil hru

upraven format html stranek

pridan LOCKED status a moznost nastaveni Lock statusu do progress casti

upravena stage.html stranka - odebrano duplicitni tlacitko

pridano zobrazen, ze tym nezahajil hru

--- a/src/main/resources/templates/progress/getHintList.html
+++ b/src/main/resources/templates/progress/getHintList.html
@@ -28,10 +28,13 @@
                 <td id="hintId" align="center" th:text="${hint.hintId}">value</td>
                 <td align="center" th:text="${hint.value}">value</td>
                 <td align="center">
-                    <button th:if="${takenHints.get(hint.hintId) == null}"
-                            th:onclick="'javascript:takeHintDialog(' + ${hint.hintId} + ')'">Vzít Hint
+                    <button class="btn btn-default btn-lg"
+                            th:if="${takenHints.get(hint.hintId) == null}"
+                            th:onclick="'javascript:takeHintDialog(' + ${hint.hintId} + ')'">
+                        Vzít Hint
                     </button>
-                    <button th:if="${takenHints.get(hint.hintId) != null}"
+                    <button class="btn btn-default btn-lg"
+                            th:if="${takenHints.get(hint.hintId) != null}"
                             th:onclick="'javascript:revertHintDialog(' + ${hint.hintId} + ')'">
                         Odebrat Hint
                     </button>
